@@ -66,12 +66,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				
 				<configuration>
-					<systemPropertyVariables>
-						<xmlOutputDir>${project.build.directory}/surefire</xmlOutputDir>
-					</systemPropertyVariables>	
-					
+					<forkCount>3</forkcount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256</argLine>
 				</configuration>
 			</plugin>	
 			
